--- a/src/app/pages/student-management/student-management.component.css
+++ b/src/app/pages/student-management/student-management.component.css
@@ -4,3 +4,15 @@ mat-form-field {
     justify-content: flex-start; 
     margin-right: auto;
 }
+
+.pi.pi-user {
+    color: #32bd98;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.pi.pi-user:hover {
+    font-size: 1.8rem;
+    color: #c81212;
+    cursor: pointer;
+}
