--- a/src/app/pages/activity-tracker/activity-tracker.component.html
+++ b/src/app/pages/activity-tracker/activity-tracker.component.html
@@ -1,52 +1,52 @@
-<div class="card text-center">
-    <div class="card-header">
-        <h2>Activity Tracker</h2>
+<p-card header="Activity Tracker">
+    <div class="card">
+        <p-table [value]="trackerData" [tableStyle]="{'min-width': '50rem'}" [paginator]="true" [rows]="10"
+            [showCurrentPageReport]="true"
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            [rowsPerPageOptions]="[10, 25, 50]">
+            <ng-template pTemplate="caption">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="card flex flex-wrap justify-content-center">
+                            <span class="p-input-icon-left">
+                                <i class="pi pi-search"></i>
+                                <input class="p-inputtext-lg" placeholder="Search" type="text" pInputText
+                                    [(ngModel)]="filterText" (input)="filterTable()" style="width: 100%;" />
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-12" style="display: flex; justify-content: flex-start; margin-right: auto;">
+                        <h2>Filtered tracker count : {{trackerLength}}</h2>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Sr.No.</th>
+                    <th>User ID.</th>
+                    <th>Activity</th>
+                    <th>Description</th>
+                    <th>Application ID.</th>
+                    <th>Created AT</th>
+                    <th>Updated AT</th>
+                    <th>Location</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-tracker>
+                <tr [pSelectableRow]="tracker">
+                    <td>{{tracker.id}}</td>
+                    <td>{{tracker.user_id}}</td>
+                    <td>{{tracker.activity}}</td>
+                    <td>{{tracker.data}}</td>
+                    <td>{{tracker.application_id}}</td>
+                    <td>{{tracker.created_at}}</td>
+                    <td>{{tracker.updated_at}}</td>
+                    <td>{{tracker.location}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
     </div>
-    <div class="card-body">
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <mat-form-field class="example-full-width">
-                    <input matInput type="text" [(ngModel)]="filterText" placeholder="Search"
-                        (input)="filterTable()" />
-                </mat-form-field>
-            </div>
-            <div class="col-md-12" style="display: flex; justify-content: flex-start; margin-right: auto;">
-                <h2>Filtered tracker count : {{trackerLength}}</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <p-table [value]="trackerData" [tableStyle]="{'min-width': '50rem'}" [paginator]="true"
-                    [rows]="10" [showCurrentPageReport]="true"
-                    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-                    [rowsPerPageOptions]="[10, 25, 50]">
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>Sr.No.</th>
-                            <th>User ID.</th>
-                            <th>Activity</th>
-                            <th>Description</th>
-                            <th>Application ID.</th>
-                            <th>Created AT</th>
-                            <th>Updated AT</th>
-                            <th>Location</th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-tracker>
-                        <tr [pSelectableRow]="tracker">
-                            <td>{{tracker.id}}</td>
-                            <td>{{tracker.user_id}}</td>
-                            <td>{{tracker.activity}}</td>
-                            <td>{{tracker.data}}</td>
-                            <td>{{tracker.application_id}}</td>
-                            <td>{{tracker.created_at}}</td>
-                            <td>{{tracker.updated_at}}</td>
-                            <td>{{tracker.location}}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-        </div>
-    </div>
-</div>
+</p-card>
