--- a/src/app/pages/verified-applications/verified-applications.component.html
+++ b/src/app/pages/verified-applications/verified-applications.component.html
@@ -85,7 +85,7 @@
                     <td>{{verified.approved_by}}</td>
                     <td>
                         <a class="hoverIcon">
-                            <i class="pi pi-user" style="font-size: 1.5rem; cursor: pointer;"
+                            <i class="pi pi-user" pTooltip="View More" tooltipPosition="top"
                                 (click)="viewMore(verified.user_id,verified.id)"></i>
                         </a>
                     </td>
@@ -98,9 +98,9 @@
                             (click)="sendMultiple()"></p-button>
                     </td>
                     <td>
-                        <p-button icon="pi pi-times" styleClass="p-button-rounded p-button-danger p-button-outlined"
+                        <p-button icon="pi pi-times" pTooltip="Reject" tooltipPosition="top"
                             (click)="rejectApplication(verified.user_id,verified.id,verified.name)"></p-button>
-                        <p-button icon="pi pi-refresh" styleClass="p-button-rounded p-button p-button-outlined"
+                        <p-button icon="pi pi-refresh" pTooltip="Resend" tooltipPosition="top"
                             (click)="resendApplication(verified.user_id,verified.id,verified.name)"></p-button>
                     </td>
                 </tr>
