--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -11,6 +11,11 @@ $color2: #3197EE;
     display: none;
 }
 
+input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        display: none;
+      }
+
 /* Hide scrollbar for IE, Edge and Firefox */
 .form {
     -ms-overflow-style: none;
@@ -104,16 +109,20 @@ input[type=email],
     0% {
         transform: rotate(0) translateY(-4.8vw) scale(.2);
     }
+
     83% {
         transform: rotate(360deg) translateY(-2.5vw) scale(1);
         transform-origin: 2vw;
     }
+
     88% {
         transform: translateY(.6vw) scale(1);
     }
+
     93% {
         transform: translateY(-.9vw) scale(1);
     }
+
     100% {
         transform: translateY(0) scale(1);
     }
@@ -123,23 +132,29 @@ input[type=email],
     25% {
         top: -6.5vw;
     }
+
     50% {
         top: 9vw;
     }
+
     75% {
         top: -10vw;
     }
+
     100% {
         top: -10vw;
         transform: scale(0);
     }
 }
 
-.radio:before, .radio:after {
+.radio:before,
+.radio:after {
     margin: auto;
 }
 
-.radio, .radio:before, .radio:after {
+.radio,
+.radio:before,
+.radio:after {
     position: relative;
     top: 0;
     bottom: 0;
@@ -167,9 +182,11 @@ input[type=email],
     animation-duration: 1.6s;
     animation-name: dot-anim;
 }
-.radio:checked + .radio {
+
+.radio:checked+.radio {
     animation-play-state: paused;
 }
+
 .radio:before {
     content: "";
     position: absolute;
@@ -180,9 +197,11 @@ input[type=email],
     box-shadow: rgba(0, 0, 0, 0.117647) 0 0 .8vw 0, rgba(0, 0, 0, 0.239216) 0 .8vw .8vw 0;
     transition: all .2s;
 }
+
 .radio:hover:before {
     box-shadow: rgba(0, 0, 0, 0.0784314) 0 0 1vw 0, rgba(0, 0, 0, 0.239216) 0 1vw 1vw 0;
 }
+
 .radio:after {
     content: "";
     width: 2.5vw;
@@ -191,30 +210,34 @@ input[type=email],
     border-radius: 50%;
     transform: scale(0);
 }
-.radio:checked + .radio:after {
+
+.radio:checked+.radio:after {
     background: transparent;
     transition: all .5s;
     transform: scale(1);
 }
 
-.ra + .radio {
+.ra+.radio {
     background: #34A853;
     animation-delay: .6s;
 }
-.ra + .radio:before {
+
+.ra+.radio:before {
     animation: unchecked-radio-4 .5s both;
 }
-.ra:checked + .radio:before {
+
+.ra:checked+.radio:before {
     animation-name: checked-radio-4;
     animation-duration: .6s;
     animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
     animation-fill-mode: both;
 }
+
 [type="radio"] {
     display: none;
 }
 
-.lb{
+.lb {
     margin: 0 20px 0 10px;
 }
 
@@ -229,6 +252,72 @@ button {
     position: absolute;
     top: 25%;
     right: 5%;
+}
+
+.number{
+    width: 100%;
+    display: flex;
+    border-radius: 8px;
+    border: none;
+    overflow: hidden;
+    background-color: #ffffff;
+}
+
+.number select{
+    width: 15%;
+    border: none;
+}
+
+.Captcha {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.Captcha div{
+    width: 40%;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    background-color: #f4f4f4;
+}
+
+.Captcha [type=text] {
+    width: 40%;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    padding-left: 3%;
+}
+
+.OTP{
+    min-width: 30vw;
+    display: flex;
+    justify-content: space-around;
+}
+
+.OTP input {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border: none;
+    border-bottom: 2px solid #d2d2d2;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    padding: 0;
+  }
+  
+  .OTP input:focus {
+    border-bottom: 2px solid deepskyblue;
+    outline: none;
+  }
+
+  input:focus {
+    
+    outline: none;
+  }
+
+  p-dialog .number{
+    border: 2px solid #d2d2d2;
   }
 
 
